--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Language Translater</title>
+    <title>Vaartalap</title>
   </head>
   <body>
     <div class="mode">
@@ -52,7 +52,7 @@
           <div class="chars"><span id="input-chars">0</span> / 5000</div>
         </div>
         <div class="card-bottom">
-          <p>Or choose your document!</p>
+          <p>Choose your document</p>
           <label for="upload-document">
             <span id="upload-title">Choose File</span>
             <ion-icon name="cloud-upload-outline"></ion-icon>
@@ -90,7 +90,7 @@
           disabled
         ></textarea>
         <div class="card-bottom">
-          <p>Download as a document!</p>
+          <p>Download as a document</p>
           <button id="download-btn">
             <span>Download</span>
             <ion-icon name="cloud-download-outline"></ion-icon>
